# orthography-selection-example

./: README.md  app.py  package-lock.json  package.json  pyproject.toml  sentences.json
src/: index.js
templates/: index.html
