[tool.poetry]
name = "orth"
version = "0.1.0"
description = ""
authors = ["Eddie Antonio Santos <easantos@ualberta.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
